--- a/hatcher_source/templates/blocks/credentials_block.html
+++ b/hatcher_source/templates/blocks/credentials_block.html
@@ -9,7 +9,19 @@
     {% block stylesheet %}
     {% endblock stylesheet %}
 </head>
+<style>
+  .hatcher-logo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 10px;
+  }
+</style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <body>
+  <a class="hatcher-logo" id="reload">
+    <img src="../../media/logos/hatcher.png" height="65" class="d-inline-block align-text-top hatcher-logo" alt="Hatcher">
+  </a>
     {% block content%}
     {% endblock content%}
     
@@ -20,6 +32,21 @@
         document.getElementById('reload').addEventListener('click', function() {
           location.reload();
         });
-      </script>
+    </script>
+    <script>
+      const image = document.querySelector(".hatcher-logo");
+      const timeline_hatcher = gsap.timeline({ defaults: { duration: 1, ease: "bounce.out"},repeat:-1 ,repeatDelay:2});
+
+        timeline_hatcher.fromTo(
+          image,
+          {
+            scale: 0.5
+          },
+          {
+            scale: 1,
+            ease: "bounce.out"
+          }
+        );
+    </script>
 </body>
 </html>
