--- a/hatcher_source/templates/credentials/landing_page.html
+++ b/hatcher_source/templates/credentials/landing_page.html
@@ -1,77 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hacther</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+{% extends '../blocks/nav_landing.html' %}
+{% block stylesheet %}
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/landing_page.css' %}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-</head>
+{% endblock stylesheet %}
 
-<body>
-  <nav class="navbar navbar-expand-lg " id="nav-section">
-    <div class="container-fluid">
-      <a class="navbar-brand" id="reload">
-        <img src="../../media/logos/hatcher.png" class="d-inline-block align-text-top hatcher-logo" alt="Hatcher">
-      </a>
 
-      <button class="navbar-toggler" style="border: none;" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars" style="color: #B197FC;"></i>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav text-center">
-          <li class="nav-item">
-            <a class="nav-link active fs-4" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active fs-4" href="#feature-section">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active fs-4" href="#price-section">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active fs-4" href="#contact-section">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <div class=" text-center" id="nav-btns">
-        <button type="button" class="btn btn-primary fs-5 shake btn-gradient1" data-bs-toggle="modal"
-          data-bs-target="#staticBackdrop">
-          As Employer
-        </button>
-        <button type="button" class="btn btn-primary fs-5 shake btn-gradient2" data-bs-toggle="modal"
-          data-bs-target="#staticBackdrop2">
-          As Candidate
-        </button>
-      </div>
-    </div>
-  </nav>
-  <br>
-  <br>
-  <br>
-
+{% block content %}
   <div class="image-div"></div>
-  <div class="   overflow-hidden text-center ">
-    <h1 class="sections-heading">Join With Us</h1>
-    <!-- Modal Toggle Buttons Here -->
-    <div class="container text-center">
-      <button type="button" class="btn btn-primary fs-5 btn-gradient1" data-bs-toggle="modal"
-        data-bs-target="#staticBackdrop">
-        As Employer
-      </button>
-      <button type="button" class="btn btn-primary fs-5 btn-gradient2" data-bs-toggle="modal"
-        data-bs-target="#staticBackdrop2">
-        As Candidate
-      </button>
-    </div>
-  </div>
-
 
   <!-- Modals Here -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -109,11 +44,10 @@
 
   <!-- Card Sections -->
   <div class="container mt-5 mb-5 " id="feature-section">
-    <h1 class="sections-heading">Features</h1>
     <div class="card-group">
       <div class="card rounded">
         <div class="p-1 ">
-          <img src="../../media/logos/Skll_Based_InternSip.avif" class="card-img-top border rounded" alt="...">
+          <img src="../../media/logos/Internship.png" class="card-img-top border rounded" alt="...">
         </div>
 
         <div class="card-body">
@@ -126,7 +60,7 @@
       </div>
       <div class="card rounded">
         <div class="p-1">
-          <img src="../../media/logos/community_driven_learning.avif" class="card-img-top border rounded" alt="...">
+          <img src="../../media/logos/community.png" class="card-img-top border rounded" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title"><b>Community-Driven Learning</b></h5>
@@ -138,7 +72,7 @@
       </div>
       <div class="card rounded">
         <div class="p-1">
-          <img src="../../media/logos/smart_application_tracking.avif" class="card-img-top border rounded" alt="...">
+          <img src="../../media/logos/smart.png" class="card-img-top border rounded" alt="...">
         </div>
         <div class="card-body">
           <h5 class="card-title"><b>Smart Application Tracking</b></h5>
@@ -158,8 +92,8 @@
     <div class="card mb-3 silver_card price_card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title price_card_title">Silver Package</h5>
-        <p class="d-flex justify-content-evenly"><span class="price fs-4 ">299&#8377; /mo</span><a href="#"
-            class="btn btn-primary ">Take It</a></p>
+        <p class="d-flex justify-content-evenly"><span class="price">299&#8377;</span><a href="#"
+            class="btn btn-primary buy-btn">Take It</a></p>
         <div class="card-text d-flex flex-column align-items-start price_card_features">
           <p>
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256"
@@ -263,8 +197,8 @@
     <div class="card  mb-3 golden_card price_card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title price_card_title">Gold Package</h5>
-        <p class="d-flex justify-content-evenly"><span class="price fs-4 ">499&#8377; /mo</span><a href="#"
-            class="btn btn-primary ">Take It</a></p>
+        <p class="d-flex justify-content-evenly"><span class="price">499&#8377;</span><a href="#"
+            class="btn btn-primary buy-btn">Take It</a></p>
         <div class="card-text d-flex flex-column align-items-start price_card_features">
           <p>
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256"
@@ -369,8 +303,8 @@
     <div class="card mb-3 diamond_card price_card" style="width: 18rem;">
       <div class="card-body">
         <h5 class="card-title price_card_title">Diamond Package</h5>
-        <p class="d-flex justify-content-evenly"><span class="price fs-4 ">799&#8377; /mo</span><a href="#"
-            class="btn btn-primary ">Take It</a></p>
+        <p class="d-flex justify-content-evenly"><span class="price">799&#8377;</span><a href="#"
+            class="btn btn-primary buy-btn">Take It</a></p>
         <div class="card-text d-flex flex-column align-items-start price_card_features">
           <p>
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0,0,256,256"
@@ -475,20 +409,15 @@
 
 
   <!-- Feedback Section -->
-  <h1 class="sections-heading mt-5 mb-2" id="price-section">FeedBack</h1>
-  <div class="container contact-section d-flex flex-column flex-sm-row justify-content-evenly  mb-5"
+  <div class="container contact-section d-flex flex-column flex-sm-row justify-content-evenly  mb-5 mt-5"
     id="contact-section">
     <section class="feedback-section">
       Hatcher is a comprehensive platform designed to bridge the gap between businesses and aspiring professionals.
-      <br>
-      It empowers individuals to gain practical skills, real-world experience, and career opportunities. For businesses,
-      Hatcher offers access to talented individuals ready to contribute and grow, fostering a mutually beneficial
-      environment for success.
     </section>
 
-    <div class="container  form-container  d-lg-flex justify-content-center">
+    <div class="container  form-container  d-lg-flex justify-content-end">
       <form action="{% url 'feedback' %}" method="post"
-        class="contact-form  text-start border rounded d-flex flex-column justify-content-between">
+        class="contact-form  text-start  rounded d-flex flex-column justify-content-between">
         {% csrf_token %}
         <div class="mb-3">
           <input type="text" class="form-control" id="name" placeholder="Full Name"  name="name" required>
@@ -506,97 +435,10 @@
   </div>
 
   <!-- Footer Section -->
-  <div class="footer bg-black text-light ">
-    <div class="footer_container">
-      <div class="footer_container1">
-        Start <span class="alternate_word" id="alternate_word">Hiring</span><br>with Hatcher
-      </div>
-      <button class="get_started_free">Get started for free</button>
-    </div>
-    <br>
-    <br>
-    <div class="footer_mentions">
-      <div class="footer_content">
-        <!-- <span style="font-size: x-large;">Hatcher</span> -->
-        <a href="">
-          <img src="../../media/logos/hatcher.png" width="150px" class="hatcher_logo2" alt="">
-        </a>
-        <span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 417" class="footer_img">
-            <path
-              d="M459.37 104.22c.32 4.54.32 9.1.32 13.64 0 138.72-105.58 298.56-298.55 298.56-59.45 0-114.68-17.22-161.14-47.1 8.45.97 16.57 1.3 25.34 1.3 49.05 0 94.21-16.58 130.27-44.84A105.12 105.12 0 0 1 57.51 253a132.7 132.7 0 0 0 19.81 1.62c9.42 0 18.84-1.3 27.61-3.57A104.95 104.95 0 0 1 20.8 148.07v-1.3a105.68 105.68 0 0 0 47.43 13.32A104.86 104.86 0 0 1 21.44 72.7c0-19.49 5.2-37.36 14.3-52.95a298.27 298.27 0 0 0 216.36 109.8c-1.62-7.8-2.6-15.91-2.6-24.03C249.5 47.69 296.28.58 354.44.58c30.2 0 57.5 12.67 76.67 33.14a206.6 206.6 0 0 0 66.6-25.34 104.65 104.65 0 0 1-46.14 57.83c21.12-2.28 41.59-8.13 60.43-16.25a225.57 225.57 0 0 1-52.63 54.26z">
-            </path>
-          </svg>
-          Twitter
-        </span>
-        <span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="13" class="footer_img">
-            <path
-              d="M15.6 2c.4 1.4.4 4.4.4 4.4s0 3-.4 4.4c-.2.8-.8 1.4-1.5 1.6-1.4.4-6.1.4-6.1.4s-4.7 0-6-.4c-.8-.2-1.4-.8-1.6-1.6C0 9.4 0 6.4 0 6.4S0 3.4.4 2C.6 1.2 1.2.6 1.9.4 3.3 0 8 0 8 0s4.7 0 6 .4c.8.2 1.4.8 1.6 1.6zM6.4 9.2l4.8-2.8-4.8-2.8v5.6z">
-            </path>
-          </svg>
-          YouTube
-        </span>
-        <span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="13" class="footer_img">
-            <path
-              d="M15.6 2c.4 1.4.4 4.4.4 4.4s0 3-.4 4.4c-.2.8-.8 1.4-1.5 1.6-1.4.4-6.1.4-6.1.4s-4.7 0-6-.4c-.8-.2-1.4-.8-1.6-1.6C0 9.4 0 6.4 0 6.4S0 3.4.4 2C.6 1.2 1.2.6 1.9.4 3.3 0 8 0 8 0s4.7 0 6 .4c.8.2 1.4.8 1.6 1.6zM6.4 9.2l4.8-2.8-4.8-2.8v5.6z">
-            </path>
-          </svg>
-          Instagram
-        </span>
-        <span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 448 449" class="footer_img">
-            <path
-              d="M448 25.2v398.5c0 13.7-11.1 24.7-24.7 24.7H309.1V275h58.2l8.7-67.6h-67v-43.2c0-19.6 5.4-32.9 33.5-32.9h35.8V70.8c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9h-58.4V275h58.4v173.5H24.7C11.1 448.5 0 437.4 0 423.8V25.2C0 11.6 11.1.5 24.7.5h398.5C436.9.5 448 11.6 448 25.2z">
-            </path>
-          </svg>
-          Facebook
-        </span>
-      </div>
-      <div class="footer_content">
-        <span class="mention-head">Use Cases</span>
-        <span class="mentions">Talent Acquisition</span>
-        <span class="mentions">Skill Development</span>
-        <span class="mentions">Job Preparation</span>
-        <span class="mentions">Career Launch</span>
-        <span class="mentions">Internship Hunting</span>
-        <span class="mentions">Networking Opportunities</span>
-        <span class="mentions">Customized Guidance</span>
-        <span class="mentions">Freelance Opportunities</span>
-      </div>
-      <div class="footer_content">
-        <span class="mention-head">Explore</span>
-        <span class="mentions">Personal Growth Plans</span>
-        <span class="mentions">Company Listings</span>
-        <span class="mentions">Industry Insights</span>
-        <span class="mentions">Development Features</span>
-        <span class="mentions">Job Opportunities</span>
-        <span class="mentions">Pricing</span>
-      </div>
-      <div class="footer_content">
-        <span class="mention-head">Contact Information</span>
-        <span class="mentions">support@hatcher.com</span>
-        <span class="mentions">+1-234-567-890</span>
-        <span class="mentions">Color wheel</span>
-        <span class="mentions">123 Hatcher Lane, Startup City</span>
-      </div>
-    </div>
-    <br>
-    <br>
-    <center>
-      <p class="Copyright">Copyright Notice: © 2025 Hatcher. All rights reserved</p>
-    </center>
-  </div>
-  </div>
-
-
-  <script>
-    document.getElementById('reload').addEventListener('click', function () {
-      location.reload();
-    });
-  </script>
+  {% include '../blocks/footer.html' %}
+  {% endblock content %}
+  {% block javascripts %}
+    {% load static %}
   <script src="{% static 'js/landing_page.js' %}"></script>
-</body>
+  {% endblock javascripts %}
 
-</html>
