--- a/hatcher_source/templates/credentials/register.html
+++ b/hatcher_source/templates/credentials/register.html
@@ -4,100 +4,73 @@
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
 {% endblock stylesheet %}
 {% block content %}
-<div class="container main-container">
-<h1 class="text-center sections-heading">Register</h1>
+<div class="main-container">
+  
+  <form class="container text-center" method="post" enctype="multipart/form-data"
+  action="{% url 'register' %}" onsubmit="return validatedetails()" >
+  {% csrf_token %}
 
-<form class="container text-center" method="post" enctype="multipart/form-data"
- action="{% url 'register' %}" >
-    {% csrf_token %}
-    <div class="mb-3 d-inline-block">
-        <input   name = 'FirstName' type="text" class="form-control text-center"  id="fname" aria-describedby="emailHelp" placeholder="First Name" required>
+  < class="d-flex flex-column align-items-center">
+    <h1 class="text-center sections-heading">Create or Login</h1>
+    <div class="details-group">
+      <div class="input_group_1" >
+      <label for="FirstName">First Name</label>
+        <input  name="FirstName" type="text" class="" id="FirstName"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
       </div>
-      <div class="mb-3 d-inline-block">
-        <input  name="LastName" type="text" class="form-control text-center" id="lname" placeholder="Last Name" required>
+      <div style="height: 16px;"></div>
+      <div class="input_group_5" >
+        <label for="LastName">Last Name</label>
+        <input  name="LastName" type="text" class="" id="LastName"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
       </div>
-
-      <div class="mb-3 d-inline-block">
-        <input  name="age" 
-         type="text" 
-         class="form-control text-center" 
-         id="age" 
-         maxlength="2"
-        pattern="\d{2}" 
-        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 2);" 
-         placeholder="Age"
-         required>
+      <div style="height: 16px;"></div>
+      <div class="input_group_2" >
+        <label for="Email">Email</label>
+        <input  name="Email" type="text" class="" id="Email"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
       </div>
-      <div class="mb-3 d-inline-block">
-        <input  name="age" 
-         type="text" 
-         class="form-control text-center" 
-         id="occupation" 
-         placeholder="Occupation"
-         required>
+      <div style="height: 16px;"></div>
+      <div class="input_group_3" >
+        <label for="Password">Password</label>
+        <input  name="Password" type="password" class="" id="Password"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
       </div>
-      <div class="mb-3 selection-box">
-        <select class="form-select " >
-          <option selected>Stream</option>
-          <option value="1">Science</option>
-          <option value="2">Commerce</option>
-          <option value="3">Arts</option>
-        </select>
-        <select class="form-select " >
-          <option selected>Qualified</option>
-          <option value="1">Under Graduate</option>
-          <option value="2">Graduate</option>
-          <option value="3">10/12 pass</option>
-        </select>
+      <div style="height: 16px;"></div>
+      <div class="input_group_4" >
+        <label for="Confirm_Password">Confirm Password</label>
+        <input  name="Username" type="password" class="" id="Confirm_Password"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
       </div>
-      <div class="mb-3">
-        <textarea name="Bio" class="form-control text-center" placeholder="Bio" id="exampleFormControlTextarea1" rows="1"></textarea>
-      </div>
-      <div class="mb-3 ">
-        <input  name="phone_number" 
-        type="text" 
-        maxlength="10"
-        pattern="\d{10}" 
-        oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" 
-        class="form-control text-center" 
-        placeholder="Phone Number"
-        id="exampleInputPassword1">
-      </div>
-      <div class="input-group mb-3">
-        <input name="Email" type="email" class="form-control text-center" placeholder="Email" aria-describedby="button-addon2" id="email" autocomplete="off" required> 
-        <button class="btn btn-primary" type="button" id="send-otp-btn">
-          <div class="spinner-border visually-hidden" style="height: 20px;width: 20px;" role="status" id="e-spin"></div>
-          <p class="" id="sd-otp">Send OTP</p>
-        </button>
-      </div>
-      <div class="input-group mb-3">
-          <input name="OTP" type="text" class="form-control text-center" id="otp" 
-          placeholder="Enter OTP" autocomplete="off" required>
-          <button class="btn btn-primary"` type="button" id="verify-otp-btn">
-            <div class="spinner-border visually-hidden" style="height: 20px;width: 20px;" role="status" id="o-spin"></div>
-            <p class="" id="v-otp">Verify OTP</p>
-          </button>
-      </div>
-      <div  class="mb-3">
-        <input  name="Profile_Image" class="form-control text-center" type="file" id="formFile" required>
-      </div>
-
-    <div class="mb-3 d-inline-block">
-      <input  name="Password" type="password" class="form-control text-center" id="Password" placeholder="Password" autocomplete="off" required>
     </div>
-    <div class="mb-3 d-inline-block">
-      <input  name="Confirm_Password" type="password" class="form-control text-center" id="Password2" placeholder="Confirm SPassword" autocomplete="off" required>
-    </div>
-    <center>
-      <button  type="submit" id="submit-btn" class="sub-btn">Register</button>
-      <br>
-      <p>Already register ? <a href="{% url 'login'%}">Login</a></p>
-    </center>
+    <div class="otp">
+      <p>Otp has been send to <span id="otp_email"></span> </p>
+      <input type="number"  id="otp-val1" maxlength="1">
+      <input type="number"  id="otp-val2" maxlength="1">
+      <input type="number"  id="otp-val3" maxlength="1">
+      <input type="number"  id="otp-val4" maxlength="1">
+      <button>Resend</button>
+      <p id="otp-status-message" class="otp-status-message"></p>
+    </div
+  
+  </div>
+  <div style="height: 25px; color: red; font-size: small;" id="error-message">
+    {% if error %}
+    {{error}}
+    {% endif %}
+  </div>
+  <button class="sub-btn"> Next</button>
+  <center>
+    <button  type="submit" id="submit-btn" class="sub-btn hidden">Register</button>
+    <br>
+    <p>Already register ? <a href="{% url 'login'%}" class="login">Login</a></p>
+  </center>
   </form>
 </div>
 {% endblock content %}
 {% block script %}
 {% load static %}
   <script src="{% static 'js/email_verify.js' %}"></script>
+  <script src="{% static 'js/register.js' %}"></script>
 {% endblock script %}
 
