--- a/hatcher_source/static/css/register.css
+++ b/hatcher_source/static/css/register.css
@@ -1,30 +1,135 @@
 body{
-    background-color: #fff7ed;
+    /* background: linear-gradient(90deg, rgb(1 2 7 / 77%) 10%, rgba(97, 8, 213, 0.5) 100%); */
     height: 100vh;
     font-family: monospace;
     display: flex;
     justify-content: center;
 }
-.main-container{
-    background-color: #f2b950;
-    padding: 10px;
-    width: 32%;
-    border-radius: 16px;
-    height: fit-content;
-    align-self: center;
+.input_group_1 {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    border-radius: 4px;
+    background: #ebebeb;
+    padding: 2px 6px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
 }
-.sub-btn{
+.input_group_1:hover{
+    border: 1px solid black;
+}
+.input_group_1:has(input:focus) {
+    border: 2px solid black; /* Highlight the parent on input focus */
+    border-radius: 5px;
+  }
+.input_group_2 {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    border-radius: 4px;
+    background: #ebebeb;
+    padding: 2px 6px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+}
+.input_group_2:hover{
+    border: 1px solid black;
+}
+.input_group_2:has(input:focus) {
+    border: 2px solid black; /* Highlight the parent on input focus */
+    border-radius: 5px;
+  }
+.input_group_3 {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    border-radius: 4px;
+    background: #ebebeb;
+    padding: 2px 6px;
+    border: 1px solid transparent;
+}
+.input_group_3:hover{
+    border: 1px solid black;
+}
+.input_group_3:has(input:focus) {
+    border: 2px solid black; /* Highlight the parent on input focus */
+    border-radius: 5px;
+  }
+.input_group_5 {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    border-radius: 4px;
+    background: #ebebeb;
+    padding: 2px 6px;
+    border: 1px solid transparent;
+}
+.input_group_5:hover{
+    border: 1px solid black;
+}
+.input_group_5:has(input:focus) {
+    border: 2px solid black; /* Highlight the parent on input focus */
+    border-radius: 5px;
+  }
+
+.input_group_4 {
+display: flex;
+flex-direction: column;
+width: 250px;
+border-radius: 4px;
+background: #ebebeb;
+padding: 2px 6px;
+border: 1px solid transparent;
+}
+.input_group_4:hover{
+    border: 1px solid black;
+}
+.input_group_4:has(input:focus) {
+    border: 2px solid black; /* Highlight the parent on input focus */
+    border-radius: 5px;
+  }
+label{
+    display: block;
+    text-align: start;
+    font-size: small;
+    font-weight: bold   ;
+}
+input{
+    display: block;
+    outline: none;
+    border: none;
+    background: none;
+    font-size: small;
+    /* margin-top: 2px; */
+    padding: 0px;
+}
+.main-container{
+    background: transparent;
+    height: fit-content;
+    width: fit-content;
+    align-self: center;
+    backdrop-filter: blur(1px);
+}
+.sub-btn {
     background-color: #ffd4ff;
-    border-radius: 8px;
+    border-radius: 5px;
     display: inline-block;
+    width: 250px;
+    height: 37px;
 }
 p{
     display: inline;
+    color: rgb(109, 104, 104);
+    font-weight: 500;
 }
 .sections-heading{
     text-align: center;
-    font-family: monospace;
-    color: rgb(213, 37, 37);
+    font-family: 'circular';
+    font-weight: 600;
+    background: linear-gradient(90deg, rgb(206, 71, 71) 50%, rgba(23, 1, 52, 0.5) 100%);
+    -webkit-text-fill-color: transparent; 
+    background-clip: text;
+    -webkit-background-clip: text; 
 }
 .selection-box{
     display: flex;
@@ -33,6 +138,19 @@ p{
 .selection-box>select{
     width: 210px;
 }
+.login{
+    color: black;
+    font-weight: bold;
+    text-decoration: underline;
+}
+.login:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.hidden{
+    display: none;
+}
+
 /* Responsive */
 @media (max-width : 600px){
     .main-container{
