--- a/hatcher_source/templates/credentials/login.html
+++ b/hatcher_source/templates/credentials/login.html
@@ -1,33 +1,46 @@
 {% extends '../blocks/credentials_block.html' %}
 {% block stylesheet %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/login.css' %}">
+<link rel="stylesheet" href="{% static 'css/register.css' %}">
 {% endblock stylesheet %}
 {% block content %}
+<div class="main-container">
+  
+  <form class="container text-center" method="post" enctype="multipart/form-data"
+  action="{% url 'login' %}" >
+  {% csrf_token %}
 
-<div class="d-flex flex-column h-100 justify-content-center ">
-  <div class=" align-self-center  form-div ">
-    <h1 class="text-center sections-heading">Login</h1>
-    <form class="container " method="post" enctype="multipart/form-data"
-     action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input name="email" type="email" class="form-control text-center"  id="exampleInputEmail1" aria-describedby="emailHelp" autocomplete="off" required  >
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input name="password" type="password" class="form-control text-center" id="exampleInputPassword1" 
-          autocomplete="off" required>
-        </div>
-       <center class="mt-4">
-        <button type="submit" class="sub-btn">login</button>
-        <br>
-        <p>New user ? <a href="{% url 'register'%}">Register</a></p>
-      </center>
-        
-      </form>
+  <div class="d-flex flex-column align-items-center">
+    <h1 class="text-center sections-heading">Create or Login</h1>
+    
+      <div class="input_group_2" >
+        <label for="Email">Email</label>
+        <input  name="email" type="text" class="" id="Email"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
+      </div>
+      <div style="height: 16px;"></div>
+      <div class="input_group_3" >
+        <label for="Password">Password</label>
+        <input  name="password" type="password" class="" id="Password"  autocomplete="First Name" dir="auto" 
+        value="" autocapitalize="off" required>
+      </div>
+      
   </div>
+  <div style="height: 25px; color: red; font-size: small;" id="error-message">
+    {% if error %}
+    {{error}}
+    {% endif %}
+  </div>
+  <center>
+    <button  type="submit" id="submit-btn" class="sub-btn">Register</button>
+    <br>
+    <p>New User ? <a href="{% url 'register'%}" class="login">Sign Up</a></p>
+  </center>
+  </form>
 </div>
 {% endblock content %}
+{% block script %}
+{% load static %}
+  <script src="{% static 'js/email_verify.js' %}"></script>
+{% endblock script %}
 
