Filter html change  in dashboard

--- a/hatcher_source/templates/dashboard/home.html
+++ b/hatcher_source/templates/dashboard/home.html
@@ -95,6 +95,7 @@
         </div>
       </div>
 
+      <!-- filter_devide -->
       <div class="container ">
         <hr class="filter_devide">
       </div>
@@ -132,6 +133,46 @@
         </div>
       </div>
 
+      <!-- filter_devide -->
+      <div class="container ">
+        <hr class="filter_devide">
+      </div>
+
+
+      <!-- Job Type Filter -->
+      <div class="d-flex justify-content-between">
+        <div class="container">
+          <p class="m-0"><b>Job Type</b></p>
+        </div>
+        <div>
+          <svg class="toggle_arrow" data-toggle-div='job_type_filter' xmlns="http://www.w3.org/2000/svg" width="20"
+            height="20" fill="none" viewBox="0 0 20 20">
+            <path fill="#8C8594"
+              d="M9.37 6.963L5.261 11.61a1.104 1.104 0 000 1.428.82.82 0 001.261 0l3.482-3.929 3.471 3.928a.82.82 0 001.262 0 1.104 1.104 0 000-1.427l-4.107-4.647c-.34-.395-.913-.395-1.262 0z">
+            </path>
+          </svg>
+        </div>
+      </div>
+      <div class="container mt-2 d-flex flex-column" id="job_type_filter">
+        <div>
+          <input type="checkbox" name="salary" value="10000" id="FullTime" >
+          <label for="FullTime">Full Time</label>
+        </div>
+        <div>
+          <input type="checkbox" name="salary" value="20000" id="PartTime" >
+          <label for="PartTime">Part Time</label>
+        </div>
+        <div>
+          <input type="checkbox" name="salary" value="30000" id="Internship" >
+          <label for="Internship">Internship</label>
+        </div>
+        <div>
+          <input type="checkbox" name="salary" value="30000" id="Internship" >
+          <label for="Internship">Hourly</label>
+        </div>
+      </div>
+
+      <!-- filter_devide -->
       <div class="container ">
         <hr class="filter_devide">
       </div>
@@ -154,20 +195,24 @@
       <div class="container mt-2 d-flex flex-column" id="work_type_filter">
         <div>
           <input type="checkbox" name="salary" value="10000" id="FullTime" >
-          <label for="FullTime">FullTime</label>
+          <label for="FullTime">Work from home</label>
         </div>
         <div>
           <input type="checkbox" name="salary" value="20000" id="PartTime" >
-          <label for="PartTime">PartTime</label>
+          <label for="PartTime">Work from office</label>
         </div>
         <div>
           <input type="checkbox" name="salary" value="30000" id="Internship" >
-          <label for="Internship">Internship</label>
+          <label for="Internship">Field Job</label>
         </div>
       </div>
+
+    <!-- filter_devide -->
+    <div class="container ">
+      <hr class="filter_devide">
     </div>
 
-    <div class="h-[1px] w-full bg-[#E8E7EA]"></div>
+    </div>
   </div>
 
 
